# developsToday_test_task

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TEST_TASK.md  Travel-Planner-API.postman_collection.json  app.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: a66f95ddf5f7_add_projectplace_and_travelproject_.py  aac664d00c20_add_user_model.py
app/: config.py  constants.py  database.py  security.py  utils.py
app/clients/artic/: client.py  errors.py  schemas.py
app/models/: __init__.py  project_place.py  travel_project.py  user.py
app/repositories/: project_place.py  travel_project.py  user.py
app/routers/: auth.py  base.py  external_places.py  projects.py  users.py
app/schemas/: auth.py  base.py  project_place.py  travel_project.py  user.py
app/services/: artic.py  travel_project.py  user.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
