[project]
name = "travel-planner"
version = "0.1.0"
description = "Python engineer test assessment"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.129.0",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "fastapi[standard]",
    "ruff>=0.15.2",
]
